feat: user & Notification
modules and tests finished